k8s/monitoring-namespace.yaml
# Monitoring Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    prometheus-scrape: 'true'
